[package]
name = "gatewaysocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
getopts = "0.2"
pnet = "0.34.0"
futures = "0.3"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
prometheus = "0.13.4"
lazy_static = "1.5.0"
bytes = "1"
atomic-time = "0.1"
