[package]
name = "gatewaysocks"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
getopts = "0.2"
pnet = "0.34.0"
futures = "0.3"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.8.4"
bytes = "1"
atomic-time = "0.1"
dashmap = "6.1"
tabled = "0.20"
