[package]
name = "gatewaysocks"
version = "0.2.1"
authors = ["airtrack <airtrack.sk@gmail.com>"]
edition = "2024"

[dependencies]
socks5 = { git = "https://github.com/airtrack/sproxy.git", tag = "0.1.0" }
log = "0.4"
env_logger = "0.11"
getopts = "0.2"
pnet = "0.34.0"
futures = "0.3"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.8.4"
bytes = "1"
atomic-time = "0.1"
dashmap = "6.1"
tabled = "0.20"
rand = "0.9"
